--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
+boto3==1.7.84
+botocore==1.10.84
 dj-database-url==0.5.0
 Django==2.1
 django-heroku==0.3.1
 django-robots==3.1.0
+django-storages==1.6.6
+docutils==0.14
 gpxpy==1.3.3
 gunicorn==19.9.0
+jmespath==0.9.3
 Pillow==5.2.0
 psycopg2==2.7.5
+python-dateutil==2.7.3
 pytz==2018.5
+s3transfer==0.1.13
+six==1.11.0
 whitenoise==4.0
