--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-boto3==1.8.1
-botocore==1.11.1
+boto3==1.8.2
+botocore==1.11.2
 dj-database-url==0.5.0
 Django==2.1
 django-heroku==0.3.1
@@ -15,4 +15,5 @@ python-dateutil==2.7.3
 pytz==2018.5
 s3transfer==0.1.13
 six==1.11.0
+urllib3==1.23
 whitenoise==4.0
