--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ billiard==3.5.0.4
 boto3==1.8.7
 botocore==1.11.7
 celery==4.2.1
+certifi==2018.8.24
+chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.1.1
 django-csp==3.4
@@ -11,6 +13,7 @@ django-robots==3.1.0
 django-storages==1.7
 docutils==0.14
 gunicorn==19.9.0
+idna==2.7
 jmespath==0.9.3
 kombu==4.2.1
 Pillow==5.2.0
@@ -18,8 +21,10 @@ psycopg2==2.7.5
 python-dateutil==2.7.3
 pytz==2018.5
 redis==2.10.6
+requests==2.19.1
 s3transfer==0.1.13
 six==1.11.0
+staticmap==0.5.4
 urllib3==1.23
 vine==1.1.4
 whitenoise==4.0
