--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,55 @@
-amqp==2.3.2
-billiard==3.5.0.4
-boto3==1.8.7
-botocore==1.11.7
-celery==4.2.1
+aioredis==1.1.0
+asgiref==2.3.2
+asn1crypto==0.24.0
+async-timeout==3.0.0
+attrs==18.2.0
+autobahn==18.9.2
+Automat==0.7.0
+boto3==1.9.0
+botocore==1.12.0
 certifi==2018.8.24
+cffi==1.11.5
+channels==2.1.3
+channels-redis==2.3.0
 chardet==3.0.4
+constantly==15.1.0
+cryptography==2.3.1
+daphne==2.2.2
 dj-database-url==0.5.0
 Django==2.1.1
 django-csp==3.4
 django-heroku==0.3.1
 django-robots==3.1.0
-django-storages==1.7
+django-storages==1.7.1
 docutils==0.14
-gunicorn==19.9.0
+h2==3.0.1
+hiredis==0.2.0
+hpack==3.0.0
+hyperframe==5.1.0
+hyperlink==18.0.0
 idna==2.7
+incremental==17.5.0
 jmespath==0.9.3
-kombu==4.2.1
+msgpack==0.5.6
 Pillow==5.2.0
+priority==1.3.0
 psycopg2==2.7.5
+psycopg2-binary==2.7.5
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
+pycparser==2.18
+PyHamcrest==1.9.0
+pyOpenSSL==18.0.0
 python-dateutil==2.7.3
 pytz==2018.5
 redis==2.10.6
 requests==2.19.1
 s3transfer==0.1.13
+service-identity==17.0.0
 six==1.11.0
 staticmap==0.5.4
+Twisted==18.7.0
+txaio==18.8.1
 urllib3==1.23
-vine==1.1.4
 whitenoise==4.0
+zope.interface==4.5.0
