--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ idna==2.7
 jmespath==0.9.3
 Pillow==5.2.0
 psycopg2==2.7.5
+psycopg2-binary==2.7.5
 python-dateutil==2.7.3
 pytz==2018.5
 requests==2.19.1
