--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 amqp==2.3.2
 billiard==3.5.0.4
-boto3==1.9.3
-botocore==1.12.3
+bokeh==0.13.0
+boto3==1.9.9
+botocore==1.12.9
 Brotli==1.0.4
 celery==4.2.1
 certifi==2018.8.24
@@ -15,18 +16,26 @@ django-storages==1.7.1
 docutils==0.14
 gunicorn==19.9.0
 idna==2.7
+Jinja2==2.10
 jmespath==0.9.3
 kombu==4.2.1
+MarkupSafe==1.0
+numpy==1.15.2
+packaging==17.1
 Pillow==5.2.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
+pyparsing==2.2.1
 python-dateutil==2.7.3
 pytz==2018.5
+PyYAML==3.13
 redis==2.10.6
 requests==2.19.1
 s3transfer==0.1.13
+scipy==1.1.0
 six==1.11.0
 staticmap==0.5.4
+tornado==5.1.1
 urllib3==1.23
 vine==1.1.4
 whitenoise==4.1
