--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 amqp==2.3.2
 billiard==3.5.0.4
 bokeh==0.13.0
-boto3==1.9.15
-botocore==1.12.15
+boto3==1.9.18
+botocore==1.12.18
 Brotli==1.0.6
 celery==4.2.1
 certifi==2018.8.24
@@ -19,6 +19,7 @@ idna==2.7
 Jinja2==2.10
 jmespath==0.9.3
 kombu==4.2.1
+kwargs-only==1.0.0
 MarkupSafe==1.0
 numpy==1.15.2
 packaging==18.0
@@ -35,6 +36,7 @@ s3transfer==0.1.13
 scipy==1.1.0
 six==1.11.0
 staticmap==0.5.4
+timezonefinder==3.1.0
 tornado==5.1.1
 urllib3==1.23
 vine==1.1.4
